Stop InfoBlock text overflowing in iOS7
https://github.com/clearleft/clearfractal/issues/110

--- a/assets/sass/components/info-block.scss
+++ b/assets/sass/components/info-block.scss
@@ -16,6 +16,9 @@
     margin-right: px2rem(16px);
     margin-bottom: px2rem(24px);
 }
+.InfoBlock-group {
+    flex-grow: 1;
+}
 .InfoBlock-title {
     margin-top: 0;
     margin-bottom: px2rem(4px);
